Fix some layout issues

--- a/style.css
+++ b/style.css
@@ -7,14 +7,13 @@
 
 html, body {
   min-height: 100vh;
-  width: 100%;
+  min-width: 100%;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 40px;
   background-color: var(--main-color-bright);
 }
 
@@ -37,13 +36,14 @@ html, body {
   grid-template-rows: repeat(3, 1fr);
   aspect-ratio: 1/1;
   width: min(500px, 90vw);
+  margin-bottom: 50px;
 }
 
 .cell {
   background-color: var(--main-color-bright);
   color: var(--secondary-color-bright);
   border: none;
-  font-size: min(8rem, 30vw);
+  font-size: 8rem;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -70,7 +70,7 @@ html, body {
   display: flex;
   width: min(500px, 90vw);
   gap: 20px;
-  align-items: center;
+  align-items: start;
   justify-content: space-around;
   text-align: center;
   color: var(--secondary-color-bright);
@@ -79,16 +79,14 @@ html, body {
 .description > * {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 5px;
+  height: 100%;
 }
 
 .score {
   font-size: 2rem;
   font-weight: bold;
-}
-
-.turn {
-  font-size: 1.2rem;
 }
 
 /* Dark theme */
@@ -131,6 +129,11 @@ html, body {
 /* Dark theme */
 
 @media (max-width: 600px) {
+
+  .cell {
+    font-size: 24vw;
+  }
+
   .description {
     display: grid;
     grid-template-areas: 
@@ -139,6 +142,11 @@ html, body {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     width: min(500px, 90vw);
+    font-size: 5vw;
+  }
+
+  .score {
+    font-size: 8vw;
   }
 
   .x-score { grid-area: x-score; }
@@ -147,9 +155,12 @@ html, body {
   .turn { grid-area: turn; }
 }
 
-@media (max-height: 650px) {
+@media (max-height: 600px) {
   .board {
-    height: min(400px, 90vw);
-    width: auto;
+    width: min(400px, 90vw);
+  }
+
+  .cell {
+    font-size: 16vh;
   }
 }
